--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,14 @@
 
 .game_over {
   position: absolute;
-  top: 40%;
-  left: 22%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 2;
   display: none;
+  text-align: center;
 }
+
 .game_over > h2 {
   font-size: 50px;
   color: white;
